--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,9 @@
   "manifest_version": 2,
   "icons": {
     "16":"logo192.png",
-    "48": "logo192.png"
+    "48": "logo192.png",
+    "128": "logo192.png",
+    "256": "logo192.png"
   },
   "browser_action": {
     "default_popup": "index.html"
