Modifies background.js,popup.html, popup.js and manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,7 @@
     "48": "assets/bear.png",
     "128": "assets/bear.png"
   },
+
   "permissions": [
     "activeTab",
     "tabs",
@@ -20,7 +21,9 @@
     "mdns",
     "proxy"
   ],
-  "host_permissions": ["<all_urls>"],
+  "host_permissions": ["<all_urls>", 
+    "https://www.googleapis.com/*"],
+
   "action": {
     "default_icon": {
       "16": "assets/bear2.png",
@@ -28,7 +31,7 @@
       "32": "assets/bear2.png"
     },
     "default_title": "learnmutiny extension",
-    "default_popup": "src/bookmark/bookmark.html"
+    "default_popup": "popup.html"
   },
   "background": {
     "service_worker": "background.js"
