--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -20,7 +20,7 @@
     "mdns",
     "proxy"
   ],
-  "host_permissions": ["<all_urls>"],
+  "host_permissions": ["<all_urls>", "https://www.googleapis.com/*"],
   "action": {
     "default_icon": {
       "16": "assets/bear2.png",
